This is requested by customer.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <h4>Creative Template</h4>
                                             <h1>Welcome
-                                                to Prototype</h1>
+                                                to Eschborn</h1>
 
                                             <div class="whiteseparator"></div>
                                             <div class="home_btn">
